--- a/stureports/think-java/KaylaRidesBikes.think-java_results.html
+++ b/stureports/think-java/KaylaRidesBikes.think-java_results.html
@@ -66,12 +66,56 @@ Cloning into 'think-java-KaylaRidesBikes'...
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
+[COMPILING] Ch6Ex4.java
+	[ERROR] javac failed Ch6Ex4.java
+ ----begin compile output------- 
+Ch6Ex4.java:58: error: cannot find symbol
+	            boolean isIt = Exercise4.isAbecedarian(testStr);
+	                           ^
+	  symbol:   variable Exercise4
+	  location: class Ch6Ex4
+	1 error
+	
+-----------END COMPILE-------
+[COMPILING] Ch6Ex5.java
+	[ERROR] javac failed Ch6Ex5.java
+ ----begin compile output------- 
+Ch6Ex5.java:57: error: cannot find symbol
+	            boolean isIt = Exercise5.isDoubloon(testStr);
+	                           ^
+	  symbol:   variable Exercise5
+	  location: class Ch6Ex5
+	1 error
+	
+-----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[COMPILING] Ch6Ex4.java
+	[ERROR] javac failed Ch6Ex4.java
+ ----begin compile output------- 
+Ch6Ex4.java:58: error: cannot find symbol
+	            boolean isIt = Exercise4.isAbecedarian(testStr);
+	                           ^
+	  symbol:   variable Exercise4
+	  location: class Ch6Ex4
+	1 error
+	
+-----------END COMPILE-------
+[COMPILING] Ch6Ex5.java
+	[ERROR] javac failed Ch6Ex5.java
+ ----begin compile output------- 
+Ch6Ex5.java:57: error: cannot find symbol
+	            boolean isIt = Exercise5.isDoubloon(testStr);
+	                           ^
+	  symbol:   variable Exercise5
+	  location: class Ch6Ex5
+	1 error
+	
+-----------END COMPILE-------
+[SUMMARY] ['Exercise4: MISSING', 'Exercise4.Ch6Ex4: COMPILE ERROR', 'Exercise4.Ch6Ex5: COMPILE ERROR', 'Exercise5: MISSING', 'Exercise5.Ch6Ex4: COMPILE ERROR', 'Exercise5.Ch6Ex5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.00</b>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
@@ -84,9 +128,30 @@ Cloning into 'think-java-KaylaRidesBikes'...
 			                             ^
 	1 error
 	
-[SUMMARY] ['Swettercise: COMPILE ERROR']
+[COMPILING] SwetterciseTest.java
+	[ERROR] javac failed SwetterciseTest.java
+ ----begin compile output------- 
+SwetterciseTest.java:77: error: cannot find symbol
+	            gotBack = Swettercise1.isPrime(num);
+	                      ^
+	  symbol:   variable Swettercise1
+	  location: class SwetterciseTest
+	SwetterciseTest.java:109: error: cannot find symbol
+	            gotBack = Swettercise1.collatzThis(num);
+	                      ^
+	  symbol:   variable Swettercise1
+	  location: class SwetterciseTest
+	SwetterciseTest.java:157: error: cannot find symbol
+	            gotBack = Swettercise1.reverseStr(input);
+	                      ^
+	  symbol:   variable Swettercise1
+	  location: class SwetterciseTest
+	3 errors
+	
+-----------END COMPILE-------
+[SUMMARY] ['Swettercise: COMPILE ERROR', 'Swettercise.SwetterciseTest: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.20</b>
 
 </pre></body></html>
