--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -82,12 +82,56 @@ Cloning into 'think-java-ReidLuhn'...
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
+[COMPILING] Ch6Ex4.java
+	[ERROR] javac failed Ch6Ex4.java
+ ----begin compile output------- 
+Ch6Ex4.java:58: error: cannot find symbol
+	            boolean isIt = Exercise4.isAbecedarian(testStr);
+	                           ^
+	  symbol:   variable Exercise4
+	  location: class Ch6Ex4
+	1 error
+	
+-----------END COMPILE-------
+[COMPILING] Ch6Ex5.java
+	[ERROR] javac failed Ch6Ex5.java
+ ----begin compile output------- 
+Ch6Ex5.java:57: error: cannot find symbol
+	            boolean isIt = Exercise5.isDoubloon(testStr);
+	                           ^
+	  symbol:   variable Exercise5
+	  location: class Ch6Ex5
+	1 error
+	
+-----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[COMPILING] Ch6Ex4.java
+	[ERROR] javac failed Ch6Ex4.java
+ ----begin compile output------- 
+Ch6Ex4.java:58: error: cannot find symbol
+	            boolean isIt = Exercise4.isAbecedarian(testStr);
+	                           ^
+	  symbol:   variable Exercise4
+	  location: class Ch6Ex4
+	1 error
+	
+-----------END COMPILE-------
+[COMPILING] Ch6Ex5.java
+	[ERROR] javac failed Ch6Ex5.java
+ ----begin compile output------- 
+Ch6Ex5.java:57: error: cannot find symbol
+	            boolean isIt = Exercise5.isDoubloon(testStr);
+	                           ^
+	  symbol:   variable Exercise5
+	  location: class Ch6Ex5
+	1 error
+	
+-----------END COMPILE-------
+[SUMMARY] ['Exercise4: MISSING', 'Exercise4.Ch6Ex4: COMPILE ERROR', 'Exercise4.Ch6Ex5: COMPILE ERROR', 'Exercise5: MISSING', 'Exercise5.Ch6Ex4: COMPILE ERROR', 'Exercise5.Ch6Ex5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.00</b>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
@@ -96,9 +140,42 @@ Cloning into 'think-java-ReidLuhn'...
   [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] Swettercise.java
 	[ERROR] Missing Compile Target:Swettercise.java
-[SUMMARY] ['Swettercise: COMPILE ERROR']
+[COMPILING] SwetterciseTest.java
+	[SUCCESSFUL COMPILE] SwetterciseTest.java
+[RUNNING] SwetterciseTest
+-->
+
+	<br>Results for reverseStr()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	
+	<br>Results for collatzThis()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">12, 6, 3, 10, 5, 16, 8, 4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	
+	<br>Results for isPrime()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.09]
+	
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Swettercise: MISSING', 'Swettercise.SwetterciseTest: RAN, BUT TOO MANY ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.71</b>
 
 </pre></body></html>
