--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -82,12 +82,64 @@ Cloning into 'think-java-bealarson82'...
 	       ^
 	1 error
 	
+[COMPILING] Ch6Ex4.java
+	[ERROR] javac failed Ch6Ex4.java
+ ----begin compile output------- 
+./Exercise4.java:1: error: class exercise4 is public, should be declared in a file named exercise4.java
+	public class exercise4 {
+	       ^
+	Ch6Ex4.java:58: error: cannot access Exercise4
+	            boolean isIt = Exercise4.isAbecedarian(testStr);
+	                           ^
+	  bad source file: ./Exercise4.java
+	    file does not contain class Exercise4
+	    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
+	2 errors
+	
+-----------END COMPILE-------
+[COMPILING] Ch6Ex5.java
+	[ERROR] javac failed Ch6Ex5.java
+ ----begin compile output------- 
+Ch6Ex5.java:57: error: cannot find symbol
+	            boolean isIt = Exercise5.isDoubloon(testStr);
+	                           ^
+	  symbol:   variable Exercise5
+	  location: class Ch6Ex5
+	1 error
+	
+-----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[COMPILING] Ch6Ex4.java
+	[ERROR] javac failed Ch6Ex4.java
+ ----begin compile output------- 
+./Exercise4.java:1: error: class exercise4 is public, should be declared in a file named exercise4.java
+	public class exercise4 {
+	       ^
+	Ch6Ex4.java:58: error: cannot access Exercise4
+	            boolean isIt = Exercise4.isAbecedarian(testStr);
+	                           ^
+	  bad source file: ./Exercise4.java
+	    file does not contain class Exercise4
+	    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
+	2 errors
+	
+-----------END COMPILE-------
+[COMPILING] Ch6Ex5.java
+	[ERROR] javac failed Ch6Ex5.java
+ ----begin compile output------- 
+Ch6Ex5.java:57: error: cannot find symbol
+	            boolean isIt = Exercise5.isDoubloon(testStr);
+	                           ^
+	  symbol:   variable Exercise5
+	  location: class Ch6Ex5
+	1 error
+	
+-----------END COMPILE-------
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise4.Ch6Ex4: COMPILE ERROR', 'Exercise4.Ch6Ex5: COMPILE ERROR', 'Exercise5: MISSING', 'Exercise5.Ch6Ex4: COMPILE ERROR', 'Exercise5.Ch6Ex5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.00</b>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
@@ -96,9 +148,30 @@ Cloning into 'think-java-bealarson82'...
   [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] Swettercise.java
 	[ERROR] Missing Compile Target:Swettercise.java
-[SUMMARY] ['Swettercise: COMPILE ERROR']
+[COMPILING] SwetterciseTest.java
+	[ERROR] javac failed SwetterciseTest.java
+ ----begin compile output------- 
+SwetterciseTest.java:77: error: cannot find symbol
+	            gotBack = Swettercise1.isPrime(num);
+	                                  ^
+	  symbol:   method isPrime(int)
+	  location: class Swettercise1
+	SwetterciseTest.java:109: error: cannot find symbol
+	            gotBack = Swettercise1.collatzThis(num);
+	                                  ^
+	  symbol:   method collatzThis(int)
+	  location: class Swettercise1
+	SwetterciseTest.java:157: error: cannot find symbol
+	            gotBack = Swettercise1.reverseStr(input);
+	                                  ^
+	  symbol:   method reverseStr(String)
+	  location: class Swettercise1
+	3 errors
+	
+-----------END COMPILE-------
+[SUMMARY] ['Swettercise: MISSING', 'Swettercise.SwetterciseTest: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.60</b>
+<b>          [SCORE] 0.40</b>
 
 </pre></body></html>
