--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -82,6 +82,8 @@ Cloning into 'think-java-Fwuff547'...
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [RUNNING] Ch6Ex4
 -->
 abcdef
@@ -92,7 +94,7 @@ abcdef
 	no
 	eh
 	
-	<br>Results for Exercise4() //isAbecedarian
+	<br>Results for Exercise4.isAbecedarian()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -107,6 +109,8 @@ abcdef
 <--
 	[OUTPUT OK]
 
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [RUNNING] Ch6Ex5
 -->
 
@@ -128,6 +132,8 @@ abcdef
 
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [RUNNING] Ch6Ex4
 -->
 abcdef
@@ -138,7 +144,7 @@ abcdef
 	no
 	eh
 	
-	<br>Results for Exercise4() //isAbecedarian
+	<br>Results for Exercise4.isAbecedarian()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -153,6 +159,8 @@ abcdef
 <--
 	[OUTPUT OK]
 
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [RUNNING] Ch6Ex5
 -->
 
@@ -172,7 +180,7 @@ abcdef
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise4: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise4.Ch6Ex4: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise4.Ch6Ex5: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise5: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise5.Ch6Ex4: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise5.Ch6Ex5: PASSED, BUT TEST CASES FOUND SOME ERRORS']
+[SUMMARY] ['Exercise4: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise5: PASSED, BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
 <b>          [SCORE] <font color="green">0.90</font></b>
@@ -184,6 +192,8 @@ abcdef
   [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] Swettercise.java
 	[ERROR] Missing Compile Target:Swettercise.java
+[TESTING WITH] copied SwetterciseTest
+[COMPILED TEST] copied SwetterciseTest
 [RUNNING] SwetterciseTest
 -->
 
@@ -215,9 +225,9 @@ abcdef
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Swettercise: MISSING', 'Swettercise.SwetterciseTest: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] ['Swettercise: PASSED, EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.80</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
