--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -86,6 +86,8 @@ Cloning into 'think-java-jadenngo13'...
 	       ^
 	1 error
 	
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
@@ -101,6 +103,8 @@ Cloning into 'think-java-jadenngo13'...
 	2 errors
 	
 -----------END COMPILE-------
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -115,6 +119,8 @@ Ch6Ex5.java:57: error: cannot access Exercise5
 -----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
@@ -130,6 +136,8 @@ Ch6Ex5.java:57: error: cannot access Exercise5
 	2 errors
 	
 -----------END COMPILE-------
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -142,10 +150,10 @@ Ch6Ex5.java:57: error: cannot access Exercise5
 	1 error
 	
 -----------END COMPILE-------
-[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise4.Ch6Ex4: COMPILE ERROR', 'Exercise4.Ch6Ex5: COMPILE ERROR', 'Exercise5: RAN, BUT TOO MANY ERRORS', 'Exercise5.Ch6Ex4: COMPILE ERROR', 'Exercise5.Ch6Ex5: COMPILE ERROR']
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.20</b>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
@@ -154,6 +162,8 @@ Ch6Ex5.java:57: error: cannot access Exercise5
   [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] Swettercise.java
 	[SUCCESSFUL COMPILE] Swettercise.java
+[TESTING WITH] copied SwetterciseTest
+[COMPILED TEST] copied SwetterciseTest
 [RUNNING] SwetterciseTest
 -->
 
@@ -185,7 +195,7 @@ Ch6Ex5.java:57: error: cannot access Exercise5
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Swettercise: PASSED, GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.', 'Swettercise.SwetterciseTest: PASSED, GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
+[SUMMARY] ['Swettercise: PASSED, GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
 <b>          [SCORE] <font color="green">0.91</font></b>
