--- a/stureports/think-java/maxckaeh.think-java_results.html
+++ b/stureports/think-java/maxckaeh.think-java_results.html
@@ -70,10 +70,12 @@ Cloning into 'think-java-maxckaeh'...
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [RUNNING] Ch6Ex4
 -->
 
-	<br>Results for Exercise4() //isAbecedarian
+	<br>Results for Exercise4.isAbecedarian()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -88,6 +90,8 @@ Cloning into 'think-java-maxckaeh'...
 <--
 	[OUTPUT OK]
 
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [RUNNING] Ch6Ex5
 -->
 
@@ -109,10 +113,12 @@ Cloning into 'think-java-maxckaeh'...
 
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [RUNNING] Ch6Ex4
 -->
 
-	<br>Results for Exercise4() //isAbecedarian
+	<br>Results for Exercise4.isAbecedarian()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -127,6 +133,8 @@ Cloning into 'think-java-maxckaeh'...
 <--
 	[OUTPUT OK]
 
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [RUNNING] Ch6Ex5
 -->
 
@@ -146,7 +154,7 @@ Cloning into 'think-java-maxckaeh'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise4: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise4.Ch6Ex4: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise4.Ch6Ex5: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise5: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise5.Ch6Ex4: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise5.Ch6Ex5: PASSED, BUT TEST CASES FOUND SOME ERRORS']
+[SUMMARY] ['Exercise4: PASSED, BUT TEST CASES FOUND SOME ERRORS', 'Exercise5: PASSED, BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
 <b>          [SCORE] <font color="green">0.90</font></b>
@@ -158,6 +166,8 @@ Cloning into 'think-java-maxckaeh'...
   [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] Swettercise.java
 	[ERROR] Missing Compile Target:Swettercise.java
+[TESTING WITH] copied SwetterciseTest
+[COMPILED TEST] copied SwetterciseTest
 [COMPILING] SwetterciseTest.java
 	[ERROR] javac failed SwetterciseTest.java
  ----begin compile output------- 
@@ -179,9 +189,9 @@ SwetterciseTest.java:77: error: cannot find symbol
 	3 errors
 	
 -----------END COMPILE-------
-[SUMMARY] ['Swettercise: MISSING', 'Swettercise.SwetterciseTest: COMPILE ERROR']
+[SUMMARY] ['Swettercise: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.40</b>
+<b>          [SCORE] 0.60</b>
 
 </pre></body></html>
