--- a/stureports/think-java/notswett.think-java_results.html
+++ b/stureports/think-java/notswett.think-java_results.html
@@ -44,10 +44,12 @@ Cloning into 'think-java-notswett'...
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [RUNNING] Ch6Ex4
 -->
 
-	<br>Results for Exercise4() //isAbecedarian
+	<br>Results for Exercise4.isAbecedarian()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -62,6 +64,8 @@ Cloning into 'think-java-notswett'...
 <--
 	[OUTPUT OK]
 
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -75,10 +79,12 @@ Ch6Ex5.java:57: error: cannot find symbol
 -----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [RUNNING] Ch6Ex4
 -->
 
-	<br>Results for Exercise4() //isAbecedarian
+	<br>Results for Exercise4.isAbecedarian()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -93,6 +99,8 @@ Ch6Ex5.java:57: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -104,10 +112,10 @@ Ch6Ex5.java:57: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[SUMMARY] ['Exercise4: PASSED, EXCELLENT!', 'Exercise4.Ch6Ex4: PASSED, EXCELLENT!', 'Exercise4.Ch6Ex5: COMPILE ERROR', 'Exercise5: MISSING', 'Exercise5.Ch6Ex4: RAN, BUT TOO MANY ERRORS', 'Exercise5.Ch6Ex5: COMPILE ERROR']
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.20</b>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
@@ -116,6 +124,8 @@ Ch6Ex5.java:57: error: cannot find symbol
   [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] Swettercise.java
 	[ERROR] Missing Compile Target:Swettercise.java
+[TESTING WITH] copied SwetterciseTest
+[COMPILED TEST] copied SwetterciseTest
 [COMPILING] SwetterciseTest.java
 	[ERROR] javac failed SwetterciseTest.java
  ----begin compile output------- 
@@ -137,9 +147,9 @@ SwetterciseTest.java:77: error: cannot find symbol
 	3 errors
 	
 -----------END COMPILE-------
-[SUMMARY] ['Swettercise: MISSING', 'Swettercise.SwetterciseTest: COMPILE ERROR']
+[SUMMARY] ['Swettercise: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.40</b>
+<b>          [SCORE] 0.60</b>
 
 </pre></body></html>
