--- a/stureports/think-java/KaylaRidesBikes.think-java_results.html
+++ b/stureports/think-java/KaylaRidesBikes.think-java_results.html
@@ -66,6 +66,8 @@ Cloning into 'think-java-KaylaRidesBikes'...
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
@@ -77,6 +79,8 @@ Ch6Ex4.java:58: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -90,6 +94,8 @@ Ch6Ex5.java:57: error: cannot find symbol
 -----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
@@ -101,6 +107,8 @@ Ch6Ex4.java:58: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -112,10 +120,10 @@ Ch6Ex5.java:57: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[SUMMARY] ['Exercise4: MISSING', 'Exercise4.Ch6Ex4: COMPILE ERROR', 'Exercise4.Ch6Ex5: COMPILE ERROR', 'Exercise5: MISSING', 'Exercise5.Ch6Ex4: COMPILE ERROR', 'Exercise5.Ch6Ex5: COMPILE ERROR']
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.20</b>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
@@ -128,6 +136,8 @@ Ch6Ex5.java:57: error: cannot find symbol
 			                             ^
 	1 error
 	
+[TESTING WITH] copied SwetterciseTest
+[COMPILED TEST] copied SwetterciseTest
 [COMPILING] SwetterciseTest.java
 	[ERROR] javac failed SwetterciseTest.java
  ----begin compile output------- 
@@ -149,9 +159,9 @@ SwetterciseTest.java:77: error: cannot find symbol
 	3 errors
 	
 -----------END COMPILE-------
-[SUMMARY] ['Swettercise: COMPILE ERROR', 'Swettercise.SwetterciseTest: COMPILE ERROR']
+[SUMMARY] ['Swettercise: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.60</b>
 
 </pre></body></html>
