--- a/stureports/think-java/MegaMichael1000.think-java_results.html
+++ b/stureports/think-java/MegaMichael1000.think-java_results.html
@@ -82,6 +82,8 @@ Cloning into 'think-java-MegaMichael1000'...
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
@@ -93,6 +95,8 @@ Ch6Ex4.java:58: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -106,6 +110,8 @@ Ch6Ex5.java:57: error: cannot find symbol
 -----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
@@ -117,6 +123,8 @@ Ch6Ex4.java:58: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
@@ -128,10 +136,10 @@ Ch6Ex5.java:57: error: cannot find symbol
 	1 error
 	
 -----------END COMPILE-------
-[SUMMARY] ['Exercise4: MISSING', 'Exercise4.Ch6Ex4: COMPILE ERROR', 'Exercise4.Ch6Ex5: COMPILE ERROR', 'Exercise5: MISSING', 'Exercise5.Ch6Ex4: COMPILE ERROR', 'Exercise5.Ch6Ex5: COMPILE ERROR']
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.20</b>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
@@ -140,6 +148,8 @@ Ch6Ex5.java:57: error: cannot find symbol
   [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] Swettercise.java
 	[SUCCESSFUL COMPILE] Swettercise.java
+[TESTING WITH] copied SwetterciseTest
+[COMPILED TEST] copied SwetterciseTest
 [RUNNING] SwetterciseTest
 -->
 
@@ -171,7 +181,7 @@ Ch6Ex5.java:57: error: cannot find symbol
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Swettercise: PASSED, EXCELLENT!', 'Swettercise.SwetterciseTest: PASSED, EXCELLENT!']
+[SUMMARY] ['Swettercise: PASSED, EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
 <b>          [SCORE] <font color="green">1.00</font></b>
