--- a/stureports/think-java/shanebaxter101.think-java_results.html
+++ b/stureports/think-java/shanebaxter101.think-java_results.html
@@ -82,10 +82,12 @@ Cloning into 'think-java-shanebaxter101'...
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [RUNNING] Ch6Ex4
 -->
 
-	<br>Results for Exercise4() //isAbecedarian
+	<br>Results for Exercise4.isAbecedarian()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -100,6 +102,8 @@ Cloning into 'think-java-shanebaxter101'...
 <--
 	[OUTPUT OK]
 
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [RUNNING] Ch6Ex5
 -->
 
@@ -121,10 +125,12 @@ Cloning into 'think-java-shanebaxter101'...
 
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
+[TESTING WITH] copied Ch6Ex4
+[COMPILED TEST] copied Ch6Ex4
 [RUNNING] Ch6Ex4
 -->
 
-	<br>Results for Exercise4() //isAbecedarian
+	<br>Results for Exercise4.isAbecedarian()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -139,6 +145,8 @@ Cloning into 'think-java-shanebaxter101'...
 <--
 	[OUTPUT OK]
 
+[TESTING WITH] copied Ch6Ex5
+[COMPILED TEST] copied Ch6Ex5
 [RUNNING] Ch6Ex5
 -->
 
@@ -158,7 +166,7 @@ Cloning into 'think-java-shanebaxter101'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise4: PASSED, EXCELLENT!', 'Exercise4.Ch6Ex4: PASSED, EXCELLENT!', 'Exercise4.Ch6Ex5: PASSED, EXCELLENT!', 'Exercise5: PASSED, EXCELLENT!', 'Exercise5.Ch6Ex4: PASSED, EXCELLENT!', 'Exercise5.Ch6Ex5: PASSED, EXCELLENT!']
+[SUMMARY] ['Exercise4: PASSED, EXCELLENT!', 'Exercise5: PASSED, EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
 <b>          [SCORE] <font color="green">1.00</font></b>
@@ -170,6 +178,8 @@ Cloning into 'think-java-shanebaxter101'...
   [EXPECTING TARGETS] ['Swettercise']]
 [COMPILING] Swettercise.java
 	[ERROR] Missing Compile Target:Swettercise.java
+[TESTING WITH] copied SwetterciseTest
+[COMPILED TEST] copied SwetterciseTest
 [RUNNING] SwetterciseTest
 -->
 
@@ -201,9 +211,9 @@ Cloning into 'think-java-shanebaxter101'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Swettercise: MISSING', 'Swettercise.SwetterciseTest: RAN, BUT TOO MANY ERRORS']
+[SUMMARY] ['Swettercise: PASSED, EXCELLENT!']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] 0.80</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
