"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -73,12 +73,17 @@ Cloning into 'think-java-asianaaron2'...
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-Ch6Ex4.java:58: error: cannot find symbol
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                           ^
 	  symbol:   variable Exercise4
 	  location: class Ch6Ex4
-	1 error
+	2 errors
 	
 -----------END COMPILE-------
 [TESTING WITH] copied Ch6Ex5
@@ -86,12 +91,17 @@ Ch6Ex4.java:58: error: cannot find symbol
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot find symbol
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	Ch6Ex5.java:57: error: cannot find symbol
 	            boolean isIt = Exercise5.isDoubloon(testStr);
 	                           ^
 	  symbol:   variable Exercise5
 	  location: class Ch6Ex5
-	1 error
+	2 errors
 	
 -----------END COMPILE-------
 [COMPILING] Exercise5.java
@@ -101,12 +111,17 @@ Ch6Ex5.java:57: error: cannot find symbol
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-Ch6Ex4.java:58: error: cannot find symbol
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                           ^
 	  symbol:   variable Exercise4
 	  location: class Ch6Ex4
-	1 error
+	2 errors
 	
 -----------END COMPILE-------
 [TESTING WITH] copied Ch6Ex5
@@ -114,12 +129,17 @@ Ch6Ex4.java:58: error: cannot find symbol
 [COMPILING] Ch6Ex5.java
 	[ERROR] javac failed Ch6Ex5.java
  ----begin compile output------- 
-Ch6Ex5.java:57: error: cannot find symbol
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	Ch6Ex5.java:57: error: cannot find symbol
 	            boolean isIt = Exercise5.isDoubloon(testStr);
 	                           ^
 	  symbol:   variable Exercise5
 	  location: class Ch6Ex5
-	1 error
+	2 errors
 	
 -----------END COMPILE-------
 [SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
@@ -139,7 +159,12 @@ Ch6Ex5.java:57: error: cannot find symbol
 [COMPILING] SwetterciseTest.java
 	[ERROR] javac failed SwetterciseTest.java
  ----begin compile output------- 
-SwetterciseTest.java:77: error: cannot find symbol
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	SwetterciseTest.java:77: error: cannot find symbol
 	            gotBack = Swettercise1.isPrime(num);
 	                      ^
 	  symbol:   variable Swettercise1
@@ -154,7 +179,7 @@ SwetterciseTest.java:77: error: cannot find symbol
 	                      ^
 	  symbol:   variable Swettercise1
 	  location: class SwetterciseTest
-	3 errors
+	4 errors
 	
 -----------END COMPILE-------
 [SUMMARY] ['Swettercise: COMPILE ERROR']
