--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -87,35 +87,32 @@ Cloning into 'think-java-AdamRashid'...
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-Ch6Ex4.java:58: error: cannot find symbol
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                                    ^
 	  symbol:   method isAbecedarian(String)
 	  location: class Exercise4
-	1 error
+	2 errors
 	
 -----------END COMPILE-------
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
-[RUNNING] Ch6Ex5
--->
-
-	<br>Results for Exercise5().isDoubloon()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.isDoubloon("abcdef")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("anna")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("abcdabcd")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aaa")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("intestines")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("i cook crepes on sundays!")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("Bannab")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
+[COMPILING] Ch6Ex5.java
+	[ERROR] javac failed Ch6Ex5.java
+ ----begin compile output------- 
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	1 error
 	
-	
-<--
-	[OUTPUT OK]
-
+-----------END COMPILE-------
 [COMPILING] Exercise5.java
 	[SUCCESSFUL COMPILE] Exercise5.java
 [TESTING WITH] copied Ch6Ex4
@@ -123,39 +120,36 @@ Ch6Ex4.java:58: error: cannot find symbol
 [COMPILING] Ch6Ex4.java
 	[ERROR] javac failed Ch6Ex4.java
  ----begin compile output------- 
-Ch6Ex4.java:58: error: cannot find symbol
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	Ch6Ex4.java:56: error: cannot find symbol
 	            boolean isIt = Exercise4.isAbecedarian(testStr);
 	                                    ^
 	  symbol:   method isAbecedarian(String)
 	  location: class Exercise4
-	1 error
+	2 errors
 	
 -----------END COMPILE-------
 [TESTING WITH] copied Ch6Ex5
 [COMPILED TEST] copied Ch6Ex5
-[RUNNING] Ch6Ex5
--->
-
-	<br>Results for Exercise5().isDoubloon()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.isDoubloon("abcdef")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("anna")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("abcdabcd")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aaa")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("intestines")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("i cook crepes on sundays!")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("Bannab")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
+[COMPILING] Ch6Ex5.java
+	[ERROR] javac failed Ch6Ex5.java
+ ----begin compile output------- 
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	1 error
 	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Exercise4: PASSED, EXCELLENT!', 'Exercise5: PASSED, EXCELLENT!']
+-----------END COMPILE-------
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 2
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.20</b>
 
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
@@ -166,40 +160,20 @@ Ch6Ex4.java:58: error: cannot find symbol
 	[SUCCESSFUL COMPILE] Swettercise.java
 [TESTING WITH] copied SwetterciseTest
 [COMPILED TEST] copied SwetterciseTest
-[RUNNING] SwetterciseTest
--->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
+[COMPILING] SwetterciseTest.java
+	[ERROR] javac failed SwetterciseTest.java
+ ----begin compile output------- 
+./TUtils.java:37: error: cannot find symbol
+	            System.out.print(s);
+	                             ^
+	  symbol:   variable s
+	  location: class TUtils
+	1 error
 	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">6, 3, 10, 5, 16, 8, 4, 2, 1</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">2, 1</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.13999999999999999]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Swettercise: PASSED, BUT TEST CASES FOUND SOME ERRORS']
+-----------END COMPILE-------
+[SUMMARY] ['Swettercise: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">0.86</font></b>
+<b>          [SCORE] 0.60</b>
 
 </pre></body></html>
